--- a/.github/workflows/repo-issue-assign.yml
+++ b/.github/workflows/repo-issue-assign.yml
@@ -20,7 +20,7 @@ jobs:
           route: PATCH /repos/${{ github.repository }}/issues/${{ steps.parse-issue-num.outputs.num }}
           state: 'open'
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_CLAMSBOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Assign issue
         if: ${{ steps.parse-issue-num.outputs.num  != '' }}
         id: assign
@@ -29,4 +29,4 @@ jobs:
           route: POST /repos/${{ github.repository }}/issues/${{ steps.parse-issue-num.outputs.num }}/assignees
           assignees: '[ ${{ github.actor }} ]'
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_CLAMSBOT_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
